sf-hrms/force-app/main/default/objects/Employee_Salary_Structure__c/Employee_Salary_Structure__c.object-meta.xml
<CustomObject>
    <label>Employee Salary Structure</label>
    <nameField>
        <displayFormat>ESS-{0000}</displayFormat>
        <label>Structure ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Salary Structures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>