sf-hrms/force-app/main/default/objects/Employee_Salary_Structure__c/fields/Annual_Amount__c.field-meta.xml
<CustomField>
    <fullName>Annual_Amount__c</fullName>
    <label>Annual Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>