sf-hrms/force-app/main/default/objects/Employee_Salary_Structure__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <label>Effective Date</label>
    <type>Date</type>
    <required>true</required>
</CustomField>