sf-hrms/force-app/main/default/objects/Employee_Salary_Structure__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Salary Structures</relationshipLabel>
    <relationshipName>Salary_Structures</relationshipName>
    <type>Lookup</type>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>