sf-hrms/force-app/main/default/objects/Employee_Salary_Structure__c/fields/Monthly_Amount__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Amount__c</fullName>
    <label>Monthly Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
    <required>true</required>
</CustomField>