sf-hrms/force-app/main/default/objects/Employee_Salary_Structure__c/fields/Salary_Component__c.field-meta.xml
<CustomField>
    <fullName>Salary_Component__c</fullName>
    <label>Salary Component</label>
    <referenceTo>Salary_Component__c</referenceTo>
    <relationshipLabel>Employee Structures</relationshipLabel>
    <relationshipName>Employee_Structures</relationshipName>
    <type>Lookup</type>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>